exports[`Head Tags - All in One SEO Pack > Post > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/hello-world/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Open Graph tags #0`] = `
<meta
  data-rh="true"
  property="og:site_name"
  content="Test WP Site | Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Open Graph tags #1`] = `
<meta data-rh="true" property="og:type" content="article" />
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Open Graph tags #2`] = `
<meta
  data-rh="true"
  property="og:title"
  content="Hello world! | Test WP Site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Open Graph tags #3`] = `
<meta
  data-rh="true"
  property="og:url"
  content="http://my.frontity.site/hello-world/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Open Graph tags #4`] = `
<meta
  data-rh="true"
  property="article:published_time"
  content="2020-08-20T01:31:05Z"
/>
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Open Graph tags #5`] = `
<meta
  data-rh="true"
  property="article:modified_time"
  content="2020-08-31T13:42:07Z"
/>
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/hello-world/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/hello-world/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/hello-world/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/hello-world/#item",
              "name": "Hello world!",
              "url": "http://my.frontity.site/hello-world/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "Person",
        "@id": "http://my.frontity.site/author/admin/#author",
        "url": "http://my.frontity.site/author/admin/",
        "name": "admin",
        "image": {
          "@type": "ImageObject",
          "@id": "http://my.frontity.site/hello-world/#authorImage",
          "url": "http://2.gravatar.com/avatar/55502f40dc8b7c769880b10874abc9d0?s=96&d=mm&r=g",
          "width": "96",
          "height": "96",
          "caption": "admin"
        }
      },
      {
        "@type": "WebPage",
        "@id": "http://my.frontity.site/hello-world/#webpage",
        "url": "http://my.frontity.site/hello-world/",
        "name": "Hello world! | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/hello-world/#breadcrumblist"
        },
        "author": "http://my.frontity.site/hello-world/#author",
        "creator": "http://my.frontity.site/hello-world/#author",
        "datePublished": "2020-08-20T01:31:05+00:00",
        "dateModified": "2020-08-31T13:42:07+00:00"
      },
      {
        "@type": "Article",
        "@id": "http://my.frontity.site/hello-world/#article",
        "name": "Hello world! | Test WP Site",
        "headline": "Hello world!",
        "author": { "@id": "http://my.frontity.site/author/admin/#author" },
        "publisher": { "@id": "http://my.frontity.site/#organization" },
        "datePublished": "2020-08-20T01:31:05+00:00",
        "dateModified": "2020-08-31T13:42:07+00:00",
        "commentCount": "1",
        "articleSection": "Uncategorized",
        "mainEntityOfPage": {
          "@id": "http://my.frontity.site/hello-world/#webpage"
        },
        "isPartOf": { "@id": "http://my.frontity.site/hello-world/#webpage" }
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/sample-page/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Open Graph tags #0`] = `
<meta
  data-rh="true"
  property="og:site_name"
  content="Test WP Site | Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Open Graph tags #1`] = `
<meta data-rh="true" property="og:type" content="article" />
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Open Graph tags #2`] = `
<meta data-rh="true" property="og:title" content="Sample Page | Test WP Site" />
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Open Graph tags #3`] = `
<meta
  data-rh="true"
  property="og:url"
  content="http://my.frontity.site/sample-page/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Open Graph tags #4`] = `
<meta
  data-rh="true"
  property="article:published_time"
  content="2020-08-20T01:31:05Z"
/>
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Open Graph tags #5`] = `
<meta
  data-rh="true"
  property="article:modified_time"
  content="2020-08-20T01:31:05Z"
/>
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Twitter tags #0`] = `
<meta data-rh="true" property="twitter:card" content="summary" />
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Twitter tags #1`] = `
<meta data-rh="true" property="twitter:domain" content="aioseo-e2e.local" />
`;

exports[`Head Tags - All in One SEO Pack > Post > should render the Twitter tags #2`] = `
<meta
  data-rh="true"
  property="twitter:title"
  content="Hello world! | Test WP Site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Twitter tags #0`] = `
<meta data-rh="true" property="twitter:card" content="summary" />
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Twitter tags #1`] = `
<meta data-rh="true" property="twitter:domain" content="aioseo-e2e.local" />
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the Twitter tags #2`] = `
<meta
  data-rh="true"
  property="twitter:title"
  content="Sample Page | Test WP Site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Page > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/sample-page/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/sample-page/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/sample-page/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/sample-page/#item",
              "name": "Sample Page",
              "url": "http://my.frontity.site/sample-page/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "WebPage",
        "@id": "http://my.frontity.site/sample-page/#webpage",
        "url": "http://my.frontity.site/sample-page/",
        "name": "Sample Page | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/sample-page/#breadcrumblist"
        },
        "datePublished": "2020-08-20T01:31:05+00:00",
        "dateModified": "2020-08-20T01:31:05+00:00"
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > Category > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/category/nature/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Category > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/category/nature/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/category/nature/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/category/nature/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/category/nature/#item",
              "name": "Nature",
              "url": "http://my.frontity.site/category/nature/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/category/nature/#collectionpage",
        "url": "http://my.frontity.site/category/nature/",
        "name": "Nature | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/category/nature/#breadcrumblist"
        }
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > Tag > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/tag/japan/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Tag > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/tag/japan/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/tag/japan/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/tag/japan/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/tag/japan/#item",
              "name": "Japan",
              "url": "http://my.frontity.site/tag/japan/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/tag/japan/#collectionpage",
        "url": "http://my.frontity.site/tag/japan/",
        "name": "Japan | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/tag/japan/#breadcrumblist"
        }
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > Author > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/author/luisherranz/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the correct canonical link #0`] = `
<link data-rh="true" rel="canonical" href="http://my.frontity.site/" />
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Open Graph tags #0`] = `
<meta
  data-rh="true"
  property="og:site_name"
  content="Test WP Site | Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Open Graph tags #1`] = `
<meta data-rh="true" property="og:type" content="website" />
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Open Graph tags #2`] = `
<meta
  data-rh="true"
  property="og:title"
  content="Test WP Site | Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Open Graph tags #3`] = `
<meta
  data-rh="true"
  property="og:description"
  content="Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Open Graph tags #4`] = `
<meta data-rh="true" property="og:url" content="http://my.frontity.site/" />
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Twitter tags #0`] = `
<meta data-rh="true" property="twitter:card" content="summary" />
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Twitter tags #1`] = `
<meta data-rh="true" property="twitter:domain" content="aioseo-e2e.local" />
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Twitter tags #2`] = `
<meta
  data-rh="true"
  property="twitter:title"
  content="Test WP Site | Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the Twitter tags #3`] = `
<meta
  data-rh="true"
  property="twitter:description"
  content="Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > Homepage > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" },
        "potentialAction": {
          "@type": "SearchAction",
          "target": "http://my.frontity.site/?s={search_term_string}",
          "query-input": "required name=search_term_string"
        }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            }
          }
        ]
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/#collectionpage",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site | Just another WordPress site",
        "description": "Just another WordPress site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": { "@id": "http://my.frontity.site/#breadcrumblist" },
        "about": { "@id": "http://my.frontity.site/#organization" }
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/movie/the-terminator/"
/>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Open Graph tags #0`] = `
<meta
  data-rh="true"
  property="og:site_name"
  content="Test WP Site | Just another WordPress site"
/>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Open Graph tags #1`] = `
<meta data-rh="true" property="og:type" content="article" />
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Open Graph tags #2`] = `
<meta
  data-rh="true"
  property="og:title"
  content="The Terminator | Test WP Site"
/>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Open Graph tags #3`] = `
<meta
  data-rh="true"
  property="og:url"
  content="http://my.frontity.site/movie/the-terminator/"
/>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Open Graph tags #4`] = `
<meta
  data-rh="true"
  property="article:published_time"
  content="2020-01-09T19:07:38Z"
/>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Open Graph tags #5`] = `
<meta
  data-rh="true"
  property="article:modified_time"
  content="2020-01-09T19:07:38Z"
/>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Twitter tags #0`] = `
<meta data-rh="true" property="twitter:card" content="summary" />
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Twitter tags #1`] = `
<meta data-rh="true" property="twitter:domain" content="aioseo-e2e.local" />
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the Twitter tags #2`] = `
<meta
  data-rh="true"
  property="twitter:title"
  content="The Terminator | Test WP Site"
/>
`;

exports[`Head Tags - All in One SEO Pack > CPT > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/movie/the-terminator/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/movie/the-terminator/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/movie/the-terminator/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/movie/the-terminator/#item",
              "name": "The Terminator",
              "url": "http://my.frontity.site/movie/the-terminator/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "Person",
        "@id": "http://my.frontity.site/author/admin/#author",
        "url": "http://my.frontity.site/author/admin/",
        "name": "admin",
        "image": {
          "@type": "ImageObject",
          "@id": "http://my.frontity.site/movie/the-terminator/#authorImage",
          "url": "http://2.gravatar.com/avatar/55502f40dc8b7c769880b10874abc9d0?s=96&d=mm&r=g",
          "width": "96",
          "height": "96",
          "caption": "admin"
        }
      },
      {
        "@type": "WebPage",
        "@id": "http://my.frontity.site/movie/the-terminator/#webpage",
        "url": "http://my.frontity.site/movie/the-terminator/",
        "name": "The Terminator | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/movie/the-terminator/#breadcrumblist"
        },
        "author": "http://my.frontity.site/movie/the-terminator/#author",
        "creator": "http://my.frontity.site/movie/the-terminator/#author",
        "datePublished": "2020-01-09T19:07:38+00:00",
        "dateModified": "2020-01-09T19:07:38+00:00"
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > CPT (archive) > should render the correct canonical link #0`] = `
<link data-rh="true" rel="canonical" href="http://my.frontity.site/movies/" />
`;

exports[`Head Tags - All in One SEO Pack > CPT (archive) > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/movies/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/movies/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/movies/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/movies/#item",
              "name": "Movies",
              "url": "http://my.frontity.site/movies/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/movies/#collectionpage",
        "url": "http://my.frontity.site/movies/",
        "name": "Movies | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/movies/#breadcrumblist"
        }
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > Custom Taxonomy > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/actor/linda-hamilton/"
/>
`;

exports[`Head Tags - All in One SEO Pack > Custom Taxonomy > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/actor/linda-hamilton/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/actor/linda-hamilton/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/actor/linda-hamilton/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/actor/linda-hamilton/#item",
              "name": "Linda Hamilton",
              "url": "http://my.frontity.site/actor/linda-hamilton/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/actor/linda-hamilton/#collectionpage",
        "url": "http://my.frontity.site/actor/linda-hamilton/",
        "name": "Linda Hamilton | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/actor/linda-hamilton/#breadcrumblist"
        }
      }
    ]
  }
</script>
`;

exports[`Head Tags - All in One SEO Pack > Author > should render the schema tag #0`] = `
<script data-rh="true" type="application/ld+json" class="aioseo-schema">
  {
    "@context": "https://schema.org",
    "@graph": [
      {
        "@type": "WebSite",
        "@id": "http://my.frontity.site/#website",
        "url": "http://my.frontity.site/",
        "name": "Test WP Site",
        "description": "Just another WordPress site",
        "publisher": { "@id": "http://my.frontity.site/#organization" }
      },
      {
        "@type": "Organization",
        "@id": "http://my.frontity.site/#organization",
        "name": "Test WP Site",
        "url": "http://my.frontity.site/"
      },
      {
        "@type": "BreadcrumbList",
        "@id": "http://my.frontity.site/author/luisherranz/#breadcrumblist",
        "itemListElement": [
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/#listItem",
            "position": "1",
            "item": {
              "@id": "http://my.frontity.site/#item",
              "name": "Home",
              "description": "Just another WordPress site",
              "url": "http://my.frontity.site/"
            },
            "nextItem": "http://my.frontity.site/author/luisherranz/#listItem"
          },
          {
            "@type": "ListItem",
            "@id": "http://my.frontity.site/author/luisherranz/#listItem",
            "position": "2",
            "item": {
              "@id": "http://my.frontity.site/author/luisherranz/#item",
              "url": "http://my.frontity.site/author/luisherranz/"
            },
            "previousItem": "http://my.frontity.site/#listItem"
          }
        ]
      },
      {
        "@type": "CollectionPage",
        "@id": "http://my.frontity.site/author/luisherranz/#collectionpage",
        "url": "http://my.frontity.site/author/luisherranz/",
        "name": "luisherranz | Test WP Site",
        "inLanguage": "en-US",
        "isPartOf": { "@id": "http://my.frontity.site/#website" },
        "breadcrumb": {
          "@id": "http://my.frontity.site/author/luisherranz/#breadcrumblist"
        }
      }
    ]
  }
</script>
`;
